FunArray: Fix forbiddenapis problems